--- a/recipes/styles.css
+++ b/recipes/styles.css
@@ -1,17 +1,33 @@
 h1 {
-    background-color: coral;
-    color: forestgreen;
+    background-color: white;
+    color: chocolate;
     text-align: center;
+    font-family: fantasy;
 }
 
 h2 {
-    background-color: aliceblue;
-    color: midnightblue;
+    background-color: white;
+    color: black;
     text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 8px;
+    margin: 0 auto;
 }
+
+h2.h2 {
+    text-align: left;
+}
+
 
 li {
     color: coral;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: left;
+    padding: 8px;
 }
 
+div.img {
+    display: block;
+    text-align: center;
+}
 
