--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
 h1{
-    color: aquamarine;
+    color: black;
     text-align: center;
     font-weight: 700;
+    font-family: Baskerville;
+    padding: 40px;
+    font-size: 60px;
+    margin: 0 auto;
+    background-color: white;
 }
 
-p {
-    color:royalblue;
+a {
+    display: grid;
     text-align: center;
-    background-color: coral;
+    background-color: white;
+    color: black;
+    margin: 16px auto;
+    font-size: 30px;
+    font-family: baskerville;
 }
-
